Some image change

--- a/index.html
+++ b/index.html
@@ -47,8 +47,18 @@
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
           <h1><span style="color:black">K</span>arbon</h1>
+        <!-- <div class="lottie">
+          <div class="lottie-branch">
+            <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_3Nld39.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+          </div>
+          <div>
+            <lottie-player class="lottie-tree" src="https://assets8.lottiefiles.com/packages/lf20_bx9t7qgt.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>          <p>
+          </div> 
+        </div>
+         -->
 
-          <p>
+        
+         
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam,
@@ -70,7 +80,7 @@
       <section id="one" class="wrapper style2 spotlights">
         <section>
           <a href="#" class="image"
-            ><img src="images/img1.svg" alt="" data-position="center center"
+            ><img src="images/img1.png" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
