Hader color changed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="inner">
         <div style="display: flex;flex-direction: row;">
           <div style="flex: 6;">
-            <h1><span style="color:rgb(21, 189, 21)">K</span>arbon</h1>
+            <h1 style="color:rgb(172, 115, 96);"><span style="color:rgb(21, 189, 21)">K</span>arbon</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
