--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav>
         <ul>
           <li><a href="#intro">Welcome</a></li>
-          <li><a href="#one">Who we are</a></li>
+          <li><a href="#one">VISION & MISSION</a></li>
           <li><a href="#two">What we do</a></li>
           <li><a href="#three">Get in touch</a></li>
         </ul>
@@ -45,21 +45,14 @@
           <div style="flex: 6;">
             <h1 style="color:rgb(172, 115, 96);"><span style="color:rgb(21, 189, 21)">K</span>arbon</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam,
+            The online Bhangarwalas . We are a startup focusing on digitalizing the process of scrap management for our customers.
             </p>
-            <ul class="actions">
-              <li>
-                <a href="#one" class="button scrolly">Learn more</a>
-              </li>
-            </ul>
           </div>
           <div style="flex: 4; height:fit-content">
             <img src="./images/logo.png" alt="logo">
           </div>
         </div>
-        <div style="display: flex;flex-direction: row-reverse;">
+        <div style="display: flex;flex-direction: row; margin-top: -10%;">
           <img src="./images/home.png" alt="">
         </div>
       </div>
@@ -72,15 +65,14 @@
             data-position="center center" /></a>
         <div class="content">
           <div class="inner">
-            <h2>Sed ipsum dolor</h2>
+            <h2>ONE NATION ONE PLATFORM
+            </h2>
             <p>
-              Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-              turpis mauris, eu ultricies erat malesuada quis. Aliquam
-              dapibus.
+              A single platform for customers all over India to sell their scrap items and vendors to buy these scrap items.
             </p>
-            <ul class="actions">
+            <!-- <ul class="actions">
               <li><a href="generic.html" class="button">Learn more</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </section>
@@ -89,19 +81,17 @@
             data-position="top center" /></a>
         <div class="content">
           <div class="inner">
-            <h2>Feugiat consequat</h2>
+            <h2>EASE OF MANAGEMENT</h2>
             <p>
-              Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-              turpis mauris, eu ultricies erat malesuada quis. Aliquam
-              dapibus.
+              Facilitates the online management of business intricacies by reducing discrepancy and ensuring transparency.
             </p>
-            <ul class="actions">
+            <!-- <ul class="actions">
               <li><a href="generic.html" class="button">Learn more</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </section>
-      <section>
+      <!-- <section>
         <a href="#" style="background-color: white;" class="image"><img src="images/img3.png" alt=""
             data-position="25% 25%" /></a>
         <div class="content">
@@ -112,26 +102,23 @@
               turpis mauris, eu ultricies erat malesuada quis. Aliquam
               dapibus.
             </p>
-            <ul class="actions">
-              <li><a href="generic.html" class="button">Learn more</a></li>
-            </ul>
+            
           </div>
         </div>
-      </section>
+      </section> -->
       <section>
         <a href="#" style="background-color: white;" class="image"><img src="images/img5.png" alt=""
             data-position="25% 25%" /></a>
         <div class="content">
           <div class="inner">
-            <h2>Ultricies aliquam</h2>
+            <h2>CIRCULAR ECONOMY</h2>
             <p>
-              Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-              turpis mauris, eu ultricies erat malesuada quis. Aliquam
-              dapibus.
+              A supply chain of scrap item from customer to industry for sustainable development, where each stakeholder benefits.
+
             </p>
-            <ul class="actions">
+            <!-- <ul class="actions">
               <li><a href="generic.html" class="button">Learn more</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </section>
@@ -142,64 +129,55 @@
       <div class="inner">
         <h2>What we do</h2>
         <p>
-          Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-          turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-          lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-          imperdiet est velit quis lorem.
+          Scrap items have no value in the life of people. Infact, they end up wasting up space inside the house. Customers are often looking to part ways with these items, and they end up throwing them away or giving them away for a minimal price. Not only do we offer timely pickup of scrap items, but also we provide our customers money in exchange for it. 
         </p>
         <div class="features">
           <section>
-            <span class="icon solid major fa-code"></span>
-            <h3>Lorem ipsum amet</h3>
+            <span class="icon solid major fa-phone"></span>
+            <h3>Schedule</h3>
             <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
+              Customers schedules the pickup through their mobile app / web portal, by providing us the address of pickup.
             </p>
           </section>
           <section>
-            <span class="icon solid major fa-lock"></span>
-            <h3>Aliquam sed nullam</h3>
+            <span class="icon solid major fa-male"></span>
+            <h3>Pickup</h3>
             <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
+              Our pickup boys arrive at their doorstep at the scheduled time for picking up the scrap items.
+            </p>
+          </section>
+          <section>
+            <span class="icon solid major fa-credit-card"></span>
+            <h3>Payment</h3>
+            <p>
+              Our on-field manager initiates payment after segregation of scrap items. We are going cashless by paying only through UPI / NEFT. 
+            </p>
+          </section>
+          <section>
+            <span class="icon solid major fa-balance-scale"></span>
+            <h3>Store</h3>
+            <p>
+              The collected scrap items for the day are stored safely in our warehouses, unless they are dispatched to the industrial vendors for sale.
+            </p>
+          </section>
+          <section>
+            <span class="icon solid major fa-gem"></span>
+            <h3>Sell</h3>
+            <p>
+              A dedicated portal where industrial vendors sign up and place their required order quantity and quotation, subject to availability in our inventory.
             </p>
           </section>
           <section>
             <span class="icon solid major fa-cog"></span>
-            <h3>Sed erat ullam corper</h3>
+            <h3>Manage</h3>
             <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
-            </p>
-          </section>
-          <section>
-            <span class="icon solid major fa-desktop"></span>
-            <h3>Veroeros quis lorem</h3>
-            <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
-            </p>
-          </section>
-          <section>
-            <span class="icon solid major fa-link"></span>
-            <h3>Urna quis bibendum</h3>
-            <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
-            </p>
-          </section>
-          <section>
-            <span class="icon major fa-gem"></span>
-            <h3>Aliquam urna dapibus</h3>
-            <p>
-              Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-              aliquam turpis mauris, sed ultricies erat dapibus.
+              A 1-click portal for tracking every minute aspect of the business and activities of our employees at each level of hierarchy
             </p>
           </section>
         </div>
-        <ul class="actions">
+        <!-- <ul class="actions">
           <li><a href="generic.html" class="button">Learn more</a></li>
-        </ul>
+        </ul> -->
       </div>
     </section>
 
@@ -207,51 +185,28 @@
     <section id="three" class="wrapper style4 fade-up">
       <div class="inner">
         <h2>Get in touch</h2>
-        <p>
-          Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-          turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-          lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-          imperdiet est velit quis lorem.
-        </p>
+          <!-- Three -->
+
+
+
         <div class="split style1">
-          <section>
-            <form autocomplete="off" method="post" action="#">
-              <div class="fields">
-                <div class="field half">
-                  <label for="name">Name</label>
-                  <input autocomplete=off type="text" name="name" id="name" />
-                </div>
-                <div class="field half">
-                  <label for="email">Email</label>
-                  <input autocomplete=off type="text" name="email" id="email" />
-                </div>
-                <div class="field">
-                  <label for="message">Message</label>
-                  <textarea autocomplete="off" name="message" id="message" rows="5"></textarea>
-                </div>
-              </div>
-              <ul class="actions">
-                <li><a href="" class="button submit">Send Message</a></li>
-              </ul>
-            </form>
+          <section style="margin-top: 1%">
+            <img src="./images/process.png" alt="">
           </section>
           <section>
             <ul class="contact">
               <li>
-                <h3>Address</h3>
-                <span>12345 Somewhere Road #654<br />
-                  Nashville, TN 00000-0000<br />
-                  USA</span>
-              </li>
-              <li>
                 <h3>Email</h3>
-                <a href="#">user@untitled.tld</a>
+                <a href="#">kc99.kol@gmail.com</a>
+                <a href="#">jyotiagrawal851999@gmail.com</a>
               </li>
               <li>
                 <h3>Phone</h3>
-                <span>(000) 000-0000</span>
+                <span>+91 8582802452</span>
+                <br>
+                <span>+91 9647433733</span>
               </li>
-              <li>
+              <!-- <li>
                 <h3>Social</h3>
                 <ul class="icons">
                   <li>
@@ -271,7 +226,7 @@
                     <a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </section>
         </div>
