--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </p>
         <div class="split style1">
           <section>
-            <form autocomplete="off" method="post" action="#">
+            <form autocomplete="off" enctype="multipart/form-data" name="EmailForm" method="post" action="https://formspree.io/f/mgerdwnv">
               <div class="fields">
                 <div class="field half">
                   <label for="name">Name</label>
@@ -231,7 +231,7 @@
                 </div>
               </div>
               <ul class="actions">
-                <li><a href="" class="button submit">Send Message</a></li>
+                <li><a href="" class="button submit" value="submit">Send Message</a></li>
               </ul>
             </form>
           </section>
